--- a/core/templates/servicos.html
+++ b/core/templates/servicos.html
@@ -3,11 +3,12 @@
  <section id="services" class="section-padding">
       <div class="container">
         <div class="section-header text-center">
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Services</h2>
+          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Nossos Serviços</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
         <div class="row">
           <!-- Services item -->
+          
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
               <div class="icon">
@@ -20,6 +21,7 @@
             </div>
           </div>
           <!-- Services item -->
+          
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
               <div class="icon">
@@ -32,6 +34,7 @@
             </div>
           </div>
           <!-- Services item -->
+          
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
               <div class="icon">
@@ -56,6 +59,7 @@
             </div>
           </div>
           <!-- Services item -->
+          
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
               <div class="icon">
@@ -68,6 +72,7 @@
             </div>
           </div>
           <!-- Services item -->
+          
           <div class="col-md-6 col-lg-4 col-xs-12">
             <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
               <div class="icon">
