--- a/core/templates/team.html
+++ b/core/templates/team.html
@@ -2,7 +2,7 @@
 <section id="team" class="section-padding bg-gray">
       <div class="container">
         <div class="section-header text-center">
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Meet our team</h2>
+          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Conheça nossa Equipe</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
         <div class="row">
@@ -26,6 +26,7 @@
               </div>
             </div>
             <!-- Team Item Ends -->
+            
           </div>
           <div class="col-lg-6 col-md-12 col-xs-12">
             <!-- Team Item Starts -->
@@ -47,6 +48,7 @@
               </div>
             </div>
             <!-- Team Item Ends -->
+            
           </div>
           <div class="col-lg-6 col-md-12 col-xs-12">
             <!-- Team Item Starts -->
@@ -68,6 +70,7 @@
               </div>
             </div>
             <!-- Team Item Ends -->
+            
           </div>
           <div class="col-lg-6 col-md-12 col-xs-12">
             <!-- Team Item Starts -->
